# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-queryscaler"
version = "0.1.0"
description = "Queryscaler environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [                          # ← FIXED: was "ddependencies"
    "openenv-core[core]>=0.2.2",
    "pydantic>=2.0",
    "openai>=1.0",
    "duckdb>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "faker>=28.0",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "queryscaler.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["queryscaler", "queryscaler.server"]
package-dir = { "queryscaler" = ".", "queryscaler.server" = "server" }